--- a/output.css
+++ b/output.css
@@ -666,3 +666,12 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
+.fontborder{
+  font-family: sans-serif;
+  color: white;
+  text-shadow:  1px  1px 1px black,
+                  1px -1px 1px black,
+                 -1px  1px 1px black,
+                 -1px -1px 1px black;
+}
