--- a/output.css
+++ b/output.css
@@ -579,6 +579,14 @@ video {
   height: 15rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -599,6 +607,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -613,6 +625,11 @@ video {
 
 .border-hidden {
   border-style: hidden;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-yellow {
@@ -640,12 +657,35 @@ video {
   background-color: rgb(55 64 81 / var(--tw-bg-opacity));
 }
 
+.bg-darkviolet {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 77 186 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-\[\#3f63de\] {
+  --tw-gradient-from: #3f63de var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(63 99 222 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#8c4ec5\] {
+  --tw-gradient-to: #8c4ec5 var(--tw-gradient-to-position);
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pr-32 {
+  padding-right: 8rem;
 }
 
 .pt-6 {
@@ -660,6 +700,10 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-white {
