--- a/output.css
+++ b/output.css
@@ -579,6 +579,22 @@ video {
   height: 15rem;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -599,6 +615,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -615,9 +635,22 @@ video {
   border-style: hidden;
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-yellow {
   --tw-border-opacity: 1;
   border-color: rgb(243 201 70 / var(--tw-border-opacity));
+}
+
+.border-black\/40 {
+  border-color: rgb(0 0 0 / 0.4);
+}
+
+.border-opacity-40 {
+  --tw-border-opacity: 0.4;
 }
 
 .bg-blue {
@@ -630,6 +663,10 @@ video {
   background-color: rgb(31 40 55 / var(--tw-bg-opacity));
 }
 
+.bg-dark\/15 {
+  background-color: rgb(31 40 55 / 0.15);
+}
+
 .bg-green {
   --tw-bg-opacity: 1;
   background-color: rgb(24 162 74 / var(--tw-bg-opacity));
@@ -640,12 +677,30 @@ video {
   background-color: rgb(55 64 81 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.from-\[\#3f63de\] {
+  --tw-gradient-from: #3f63de var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(63 99 222 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#8c4ec5\] {
+  --tw-gradient-to: #8c4ec5 var(--tw-gradient-to-position);
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pr-32 {
+  padding-right: 8rem;
 }
 
 .pt-6 {
@@ -660,6 +715,10 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-white {
